[package]
name = "webgpu-rs"
version = "0.0.0"
authors = ["gandis0713@gmail.com"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
js-sys = "0.3.50"
wasm-bindgen = "0.2.73"

[dependencies.web-sys]
version = "0.3.5"
features = [
  'Document',
  'Element',
  'HtmlCanvasElement',
  'Window',
]
